--- a/arch/mips/Kconfig
+++ b/arch/mips/Kconfig
@@ -320,6 +320,26 @@ config MIPS_COBALT
 	select SYS_SUPPORTS_LITTLE_ENDIAN
 	select USE_GENERIC_EARLY_PRINTK_8250
 
+config MACH_PHOENIX
+	bool "phoenix CPU"
+	select BOOT_ELF32
+	select BOOT_RAW
+	select BUILTIN_DTB
+	select CEVT_R4K
+	select COMMON_CLK
+	select CSRC_R4K
+	select IRQ_MIPS_CPU
+	select LIBFDT
+	select MIPS_CPU_SCACHE
+	select SYS_HAS_EARLY_PRINTK
+	select SYS_HAS_CPU_MIPS32_R1
+	select SYS_SUPPORTS_32BIT_KERNEL
+	select SYS_SUPPORTS_LITTLE_ENDIAN
+	select USE_OF
+	help
+	  This option enables support for phoenix CPU
+
+
 config MACH_DECSTATION
 	bool "DECstations"
 	select BOOT_ELF32
@@ -1042,6 +1062,7 @@ source "arch/mips/loongson32/Kconfig"
 source "arch/mips/loongson64/Kconfig"
 source "arch/mips/netlogic/Kconfig"
 source "arch/mips/paravirt/Kconfig"
+source "arch/mips/phoenix/Kconfig"
 
 endmenu
 
