disabled rcu torture

--- a/.config
+++ b/.config
@@ -82,7 +82,6 @@ CONFIG_TINY_RCU=y
 # CONFIG_RCU_EXPERT is not set
 CONFIG_SRCU=y
 CONFIG_TINY_SRCU=y
-CONFIG_TASKS_RCU=y
 # end of RCU Subsystem
 
 # CONFIG_IKCONFIG is not set
@@ -1611,8 +1610,7 @@ CONFIG_DEBUG_LIST=y
 #
 # RCU Debugging
 #
-CONFIG_TORTURE_TEST=y
-CONFIG_RCU_PERF_TEST=y
+# CONFIG_RCU_PERF_TEST is not set
 # CONFIG_RCU_TORTURE_TEST is not set
 # CONFIG_RCU_TRACE is not set
 # CONFIG_RCU_EQS_DEBUG is not set
