--- a/arch/mips/boot/dts/phoenix/phoenix_artix7.dts
+++ b/arch/mips/boot/dts/phoenix/phoenix_artix7.dts
@@ -9,7 +9,7 @@
 
 	//TODO: insufficient bootargs
 	chosen {
-		bootargs = "console=ttyS0,115200 console=tty0 debug lpj=500000";
+		bootargs = "console=ttyS0,115200 console=tty0 kgdboc=ttyS0,115200 kgdbcon kgdbwait nokaslr rw debug lpj=500000";
 		stdout-path = "serial0:115200";
 	};
 
@@ -67,32 +67,32 @@
 			interrupts = <5>;
 		};
 
-//		axi_ethernetlite: ethernet@bfe00000 {
-//			compatible = "xlnx,xps-ethernetlite-3.00.a";
-//			device_type = "network";
-//			interrupt_parent = <&cpuintc>;
-//			interrupt = <3>;
-//			local-mac-address = [e6 c7 26 bf e2 94];
-//			phy-handle = <&phy0>;
-//			reg = <0xbfe00000 0x10000>;
-//			xlnx,duplex = <0x1>;
-//			xlnx,include-global-buffers = <0x1>;
-//			xlnx,include-internal-loopback = <0x0>;
-//			xlnx,include-mdio = <0x1>;
-//			xlnx,instance = "axi_ethernetlite_inst";
-//			xlnx,rx-ping-pong = <0x1>;
-//			xlnx,s-axi-id-width = <0x1>;
-//			xlnx,tx-ping-pong = <0x1>;
-//			xlnx,use-internal = <0x0>;
-//			mdio {
-//					#address-cells = <1>;
-//					#size-cells = <0>;
-//					phy0: phy@1 {
-//							device_type = "ethernet-phy";
-//							reg = <1>;
-//					} ;
-//			} ;
-//	};
+		axi_ethernetlite: ethernet@bfe00000 {
+			compatible = "xlnx,xps-ethernetlite-1.00.a";
+			device_type = "network";
+			//interrupt_parent = <&cpuintc>;
+			//interrupt = <3>;
+			// local-mac-address = [e6 c7 26 bf e2 94];
+			phy-handle = <&phy0>;
+			reg = <0xbfe00000 0x10000>;
+			xlnx,duplex = <0x1>;
+			xlnx,include-global-buffers = <0x1>;
+			xlnx,include-internal-loopback = <0x0>;
+			xlnx,include-mdio = <0x1>;
+			xlnx,instance = "axi_ethernetlite_inst";
+			xlnx,rx-ping-pong = <0x1>;
+			xlnx,s-axi-id-width = <0x1>;
+			xlnx,tx-ping-pong = <0x1>;
+			xlnx,use-internal = <0x0>;
+			mdio {
+					#address-cells = <1>;
+					#size-cells = <0>;
+					phy0: phy@1 {
+							device_type = "ethernet-phy";
+							reg = <1>;
+					} ;
+			} ;
+	};
 	};
 
 };
